<resources>
    <string name="tips_1">网络无法访问，请检查网络</string>
    <string name="tips_2">没有更多的数据了</string>
    <string name="tips_3">数据请求失败，请重试</string>
    <string name="tips_4">暂无数据</string>
    <string name="tips_5">数据请求失败，是否重试？</string>
    <string name="tips_6">敬请期待</string>
    <string name="tips_7">已经是最新的版本</string>
    <string name="tips_8">发现新版本</string>
    <string name="tips_9">【模块功能更新】请更新版本后再使用!</string>
    <string name="tips_10">是否进行版本更新？</string>
    <string name="tips_11">稍后更新</string>
    <string name="tips_12">马上更新</string>
    <string name="tips_13">只有给了APP存储权限才能更新</string>
    <string name="tips_14">获取【读写存储空间】权限失败，将导致无法升级APP和图片缓存，请到设置页面手动授权。</string>
    <string name="tips_15">更新应用版本：%s</string>
    <string name="tips_16">更新文件大小：%s</string>
    <string name="tips_17">无题</string>
    <string name="tips_18">一些随笔，一些踩坑；只为了让老去的时光有迹可循。</string>
    <string name="tips_19">你有一条新的自定义的消息</string>
    <string name="tips_20">弹出默认消息样式</string>
    <string name="tips_21">弹出自定义消息样式</string>
    <string name="tips_22">Can take up to %s photos and take %s photos.</string>
    <string name="tips_23">Please select a photo upload</string>
    <string name="tips_24">Uploading photo……</string>
    <string name="tips_25">Description</string>
    <string name="tips_26">是否确认提交数据?</string>

    <!-- 错误码对应的提示 -->
    <string name="tips_1001">网络不可用</string>
    <string name="tips_1002">请求网络超时</string>
    <string name="tips_1003">数据解析错误</string>
    <string name="tips_1004">服务器处理请求出错</string>
    <string name="tips_1005">服务器无法处理请求</string>
    <string name="tips_1006">请求被重定向到其他页面</string>
    <string name="tips_1404">未知错误</string>


    <string name="app_name">Urchin</string>
    <string name="app_name_test">TUrchin</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="hint">提示</string>
    <string name="retry">重试</string>
    <string name="refresh">刷新</string>
    <string name="zihhu_news">知乎日报</string>
    <string name="try_set">Test Demo</string>
    <string name="protobuf_demo">Protobuf用法</string>

    <string name="setting">常用设置</string>
    <string name="language_switch">语言切换</string>
    <string name="clear_cache">清除缓存</string>
    <string name="version_upgrade">版本升级</string>
    <string name="version_upgrade_code">版本升级(%s)</string>
    <string name="about_me">关于我</string>
    <string name="font_size">字体大小</string>
    <string name="clean_success">清除成功</string>
    <string name="open_source_page">打开原网页</string>
    <string name="share_page">分享</string>
    <string name="download_success">下载完成</string>
    <string name="download_failed">下载失败</string>
    <string name="go_permission_setting">去授权</string>
    <string name="audio">音频</string>
    <string name="manual_click">手动点击</string>
    <string name="show_notification">弹出消息</string>
    <string name="notification_message">通知栏消息</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="image_upload">Photo Upload</string>
    <string name="image_detail">Photo Detail</string>
    <string name="faceu">人脸核身</string>
    <string name="upload">Upload</string>
    <string name="upload_success">Upload Success!</string>
    <string name="day">Day Photo</string>
    <string name="me">About Me</string>


</resources>
